fix setting alignment in analyze-protein page

--- a/frontend/css/analyze-proteins.css
+++ b/frontend/css/analyze-proteins.css
@@ -160,3 +160,8 @@
 .grid-container {
     min-height: 70px;
 }
+
+.settings .text-coloring, .text-experiments, .text-proteins {
+    display: flex;
+    align-items: center;
+}
